--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
 
     // Timber
     implementation "com.jakewharton.timber:timber:$version_timber"
+
+    // Koin
+    implementation "io.insert-koin:koin-android:$version_koin"
 }
