--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -7,6 +7,10 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+def secretPropertiesFile = rootProject.file("secret.properties")
+def secretProperties = new Properties()
+secretProperties.load(new FileInputStream(secretPropertiesFile))
+
 android {
     namespace 'com.example.android.politicalpreparedness'
     compileSdk 34
@@ -17,6 +21,8 @@ android {
         targetSdkVersion 33
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "API_KEY", secretProperties['API_KEY']
     }
     buildTypes {
         release {
